{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 73,
  "lineage": "7bd3ab60-f8f1-4b36-755e-c12a8b451e8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-04e9a16b8bb1ec32b",
            "domain": "vpc",
            "id": "eipalloc-0ec825f93f932b5b8",
            "instance": "i-0590054bdbd860487",
            "network_interface": "eni-0070eb5d38d7c9088",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-128-253-18.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.253.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-first-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07efac79022b86107",
            "arn": "arn:aws:ec2:us-east-2:416454113568:instance/i-088170dfc90e31d3d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088170dfc90e31d3d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03369b719887e3491",
            "private_dns": "ip-172-31-46-24.us-east-2.compute.internal",
            "private_ip": "172.31.46.24",
            "public_dns": "ec2-3-137-136-33.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.136.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ea5c831f2abb5e43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d026529c",
            "tags": {
              "Name": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0edd9972"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07efac79022b86107",
            "arn": "arn:aws:ec2:us-east-2:416454113568:instance/i-0590054bdbd860487",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0590054bdbd860487",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jina-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0070eb5d38d7c9088"
              }
            ],
            "primary_network_interface_id": "eni-0070eb5d38d7c9088",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.128.253.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d3c00eb9f19aed3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0133eb0391969592e",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f37548e41ec5e015"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-new-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416454113568:internet-gateway/igw-0091d6c694876ceba",
            "id": "igw-0091d6c694876ceba",
            "owner_id": "416454113568",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ae873c855aa05ef5"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0d9e8d636d0bb6e00",
                "device_index": 0,
                "instance": "i-0590054bdbd860487"
              }
            ],
            "id": "eni-0070eb5d38d7c9088",
            "mac_address": "06:bf:3e:6a:3d:c4",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f37548e41ec5e015"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0133eb0391969592e"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-new-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e54d8583ffb0b7ce",
            "owner_id": "416454113568",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0091d6c694876ceba",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0091d6c694876ceba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-0ae873c855aa05ef5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c58319931f83278c",
            "route_table_id": "rtb-0e54d8583ffb0b7ce",
            "subnet_id": "subnet-0133eb0391969592e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-new-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416454113568:security-group/sg-0f37548e41ec5e015",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f37548e41ec5e015",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "416454113568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae873c855aa05ef5"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-new-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416454113568:subnet/subnet-0133eb0391969592e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0133eb0391969592e",
            "map_public_ip_on_launch": false,
            "owner_id": "416454113568",
            "tags": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0ae873c855aa05ef5"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_first_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416454113568:vpc/vpc-0ae28d41e0808c97f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a1105650e9b74dbf",
            "default_route_table_id": "rtb-00e4c542cd7b4e796",
            "default_security_group_id": "sg-00df6b357badcc07e",
            "dhcp_options_id": "dopt-863ebfed",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae28d41e0808c97f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e4c542cd7b4e796",
            "owner_id": "416454113568",
            "tags": {
              "Name": "production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_second_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416454113568:vpc/vpc-005fbbdd617dac592",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-0d261d508125fee68",
            "default_route_table_id": "rtb-018ded1e5a782bcb7",
            "default_security_group_id": "sg-08785df721a58909d",
            "dhcp_options_id": "dopt-863ebfed",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-005fbbdd617dac592",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-018ded1e5a782bcb7",
            "owner_id": "416454113568",
            "tags": {
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416454113568:vpc/vpc-0ae873c855aa05ef5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df6bd56841a6d050",
            "default_route_table_id": "rtb-00aec4d4c9dc4e407",
            "default_security_group_id": "sg-0908f880fe1d0ddc9",
            "dhcp_options_id": "dopt-863ebfed",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae873c855aa05ef5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00aec4d4c9dc4e407",
            "owner_id": "416454113568",
            "tags": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}